# wapo

./: .gitignore  LICENSE  README.md  TRAINING_FLOW.md  pyproject.toml
configs/vf-rl/: gsm8k.toml  hotpot_qa.toml  math_prm.toml  multi_agent.toml  multi_agent_qwen4B_sft.toml  multi_agent_v1.toml  multi_agent_v2.toml  multi_agent_v3.toml  numina_lean_math.toml  ott_qa.toml  ott_rl.toml
environments/aime/: aime.py  pyproject.toml
environments/math_dapo/: math_dapo.py  pyproject.toml
environments/math_dapo_hard/: math_dapo_hard.py  pyproject.toml
environments/math_prm/: math_prm.py  pyproject.toml
environments/multi_agent/: multi_agent.py  pyproject.toml
environments/multi_agent/agents/: __init__.py  answer_agent.py  multi_agent_config.py
environments/numina_lean_math/: README.md  numina_lean_math.py  pyproject.toml
environments/vf_rag_agent/: README.md  pyproject.toml  vf_rag_agent.py
notebooks/: mnist_recurrence_toy_sft_rl.ipynb  rollout_policy_gradient_mnist.ipynb
scripts/: cifar10_logq_vs_logq_minus_q.py  mnist_recurrence_toy_sft_rl.py
verifiers/: __init__.py
verifiers/envs/: multi_agent_env.py
verifiers/rl/trainer/: config.py  orchestrator.py  trainer.py  utils.py
verifiers/rubrics/: rubric.py
verifiers/scripts/: rl.py
verifiers/utils/: processing_utils.py
