[project]
name = "multi_agent"
version = "0.1.0"
description = "Multi-Agent Environment for Verifiers RL Training"
requires-python = ">=3.10"
dependencies = [
    "verifiers",
    "datasets",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["multi_agent"]
