[project]
name = "numina-lean-math"
description = "NuminaMath-LEAN single-turn math environment filtered to word problems and MCQ"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "verifiers>=0.1.5.post0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
